--- a/public/views/centros.html
+++ b/public/views/centros.html
@@ -1,52 +1,48 @@
-
 <div class="container">
     <h4>Centros Medicos</h4>
 
+    <!-- Modal Trigger -->
+              <a class="waves-effect waves-light btn modal-trigger" href="modal1">Modal</a>
+
+              <!-- Modal Structure -->
+              <div id="modal1" class="modal">
+                <div class="modal-content">
+                  <h4>{{centro.nombre}}</h4>
+                  <p>A bunch of text</p>
+                  <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  </p>
+                </div>
+                <div class="modal-footer">
+                  <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+                </div>
+              </div>
+
     <div class="col-xs-12 col-sm-6 col-md-4" ng-repeat="centro in centros">
-    <div class="contenedor">
-        <div class="centro-med">
-            <div class="lado frente">
-                <img src="{{centro.portada}}" alt="imagen"> 
-            </div>   
-            <div class="lado atras lado atras panel panel-default">
-                <div class="panel-heading tarjeta-titulo">
-                    <h4 class="text-center panel-title">{{centro.nombre}}</h4>
+        <div class="contenedor">
+            <div class="centro-med">
+                <div class="lado frente">
+                    <img src="{{centro.portada}}" alt="imagen"> 
+                </div>   
+                <div class="lado atras lado atras panel panel-default">
+                    <div class="panel-heading tarjeta-titulo">
+                        <h4 class="text-center panel-title titulo">{{centro.nombre}}</h4>
+                    </div>
+                    <div class="panel-body horarios text-center">
+                        <p dia text-center small>Horarios</p>
+                        <p ng-repeat="dia in centro.horario" class="dia text-center small">{{dia}}</p>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-block info" data-toggle="modal" data-target="#modalCentro{{centro.nombre}}">Más Información</button>
+                    
                 </div>
-                <div class="panel-body text-center">
-                    <h6 class="text-center">{{centro.descripcion}}</h6>
-                </div>
-                <div class="panel-footer">
-                    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalCentro{{centro.nombre}}">Más Información</button>
-                </div>
-            </div>
-        </div>    
-    </div>
+            </div>  
+              
+                    
         
     </div>    
 </div>
-
-<!--
-
-<div class="item" ng-repeat="centro in centros">
-    <span>
-        <a href="#"> Centro: {{centro.nombre}} </a> 
-            
-    </span>
-</div>
-<div class="centro-med" >
-            <div class="lado frente">
-                
-            </div>
-            <div class="text-center lado atras panel panel-default">
-                <div class="panel-heading tarjeta-titulo">
-                    <h4 class="text-center panel-title">{{centro.nombre}}</h4>
-                </div>
-                <div class="panel-body text-center">
-                    <h6 class="text-center">{{centro.descripcion}}</h6>
-                </div>
-                <div class="panel-footer">
-                    <h6 class="text-center">{{centro.ciudad}}</h6>
-                </div>
-            </div>       
-        </div>
--->
