paciente puede actualizar sus datos

--- a/public/views/datos.html
+++ b/public/views/datos.html
@@ -6,11 +6,11 @@
         <form id="formularioActualizarPaciente">
             <fieldset>
                 <legend>Actualice sus datos</legend>
-                Nombres: <input type="text" name="nombre" placeholder="Ingrese sus nombres" ng-model="datos.nombre" require/><br />
-                Apellidos: <input type="text" name="apellido" placeholder="Ingrese sus apellidos" ng-model="datos.apellido" require/><br />
-                C&eacute;dula: <input type="text" name="cedula" placeholder="Ingrese su c&eacute;dula" ng-model="datos.cedula" require/><br />
-                Direcci&oacute;n: <input type="text" name="direccion" placeholder="Ingrese su direcci&oacute;" ng-model="datos.direccion" require/><br />
-                Tel&eacute;fono: <input type="text" name="telefono" placeholder="Ingrese su tel&eacute;fono"  ng-model="datos.telefono" require/><br />
+                Nombres: <input type="text" name="nombre" placeholder="Ingrese sus nombres" ng-model="datos.nombre" value="{{datos.nombre}}" require/><br />
+                Apellidos: <input type="text" name="apellido" placeholder="Ingrese sus apellidos" ng-model="datos.apellido" value="{{datos.nombre}}" require/><br />
+                C&eacute;dula: <input type="text" name="cedula" placeholder="Ingrese su c&eacute;dula" ng-model="datos.cedula" value="{{datos.nombre}}" require/><br />
+                Direcci&oacute;n: <input type="text" name="direccion" placeholder="Ingrese su direcci&oacute;" ng-model="datos.direccion" value="{{datos.nombre}}" require/><br />
+                Tel&eacute;fono: <input type="text" name="telefono" placeholder="Ingrese su tel&eacute;fono"  ng-model="datos.telefono" value="{{datos.nombre}}" require/><br />
                 <button type="button" class="btn btn-primary" ng-click="actualizar()">Enviar</button>
                 <button type="button" class="btn btn-primary" ng-click="regresar()">Regresar</button>
             </fieldset>
