--- a/public/views/operario/registrarPaciente.html
+++ b/public/views/operario/registrarPaciente.html
@@ -1,55 +1,103 @@
-<section id="contenido">
-    <h4>Registrar Nuevo Paciente</h4>
-    <br>
-        <form class="col s12" id="formularioCrearPaciente" action="/paciente" method="post">
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input class='validate' type='email' name='correo' id='correo' require/>
-                <label for='email'>Ingrese correo electr&oacute;nico</label>
+<h4>Administrador de Pacientes</h4>
+<hr>
+<ul ng-click="activarInfo()" class="collapsible" data-collapsible="accordion">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">add</i>Nuevo Paciente</div>
+      <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
+        <form > 
+              <div class="modal-body">
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="nombre" ng-model="nuevo_paciente.nombre" placeholder="Nombre">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="apellido" ng-model="nuevo_paciente.apellido" placeholder="Apellido">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="cedula" ng-model="nuevo_paciente.cedula" placeholder="Cedula">
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" name="correo" ng-model="nuevo_paciente.correo" placeholder="Correo">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="direccion" ng-model="nuevo_paciente.direccion" placeholder="Direccion">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="telefono" ng-model="nuevo_paciente.telefono" placeholder="Telefono">
+                  </div>
               </div>
-            </div>
+              <div class="row modal-footer">
+                <button type="reset" class="btn btn-default col s4 right">Cancelar</button>
+                <button type="submit" class="btn btn-primary col s4" ng-click="agregar()">Crear</button>
+              </div>
+            </form>
+      </div>
+    </li>
+    <li>
+        <div class="collapsible-header large active"><i class="material-icons">label</i>Lista de Pacientes</div>
+        <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
+            <table class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <th>nombre</th>
+              <th>correo</th>
+              <th>cedula</th>
+              <th>direccion</th>
+              <th>telefono</th>
+              <!--<th>foto</th>-->
+              <th>editar</th>
+              <th>eliminar</th>
+            </tr>
+          </thead>
+          <tbody>
+              <tr ng-repeat="paciente in pacientes">;
+                  <td class="nombre"> {{ paciente.nombre }} {{ paciente.apellido }}</td>
+                  <td class="correo"> {{ paciente.correo }} </td>
+                  <td class="cedula" > {{ paciente.cedula }} </td>
+                  <td class="direccion"> {{ paciente.direccion }} </td>
+                  <td class="telefono" > {{ paciente.telefono }} </td>
+                  <!--<td class="foto"> {{ paciente.foto }} </td>-->
+                  <td class= "editar"><button type="button" class="glyphicon glyphicon-edit" data-toggle="modal" ng-click="editar($index)"></button></td>
+                  <td class= "eliminar"><button type="button" class="glyphicon glyphicon-remove-circle" ng-click="delete($index)"></button></td>
+              </tr>
+          </tbody>
+        </table>
+        </div>
+    </li>
+</ul>
 
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="Nombres" require/>
-                <label for='password'>Ingrese nombre</label>
+<!-- Modal Structure -->
+<div id="modal1" class="modal bottom-sheet">
+  <div class="modal-content">
+      <!-- Modal de editar resultado-->
+    <div>
+      <form > 
+              <div class="modal-body">
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="nombre" ng-model="editar_paciente.nombre" placeholder="Nombre">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="apellido" ng-model="editar_paciente.apellido" placeholder="Apellido">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="cedula" ng-model="editar_paciente.cedula" placeholder="Cedula">
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" name="correo" ng-model="editar_paciente.correo" placeholder="Correo" readonly>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="direccion" ng-model="editar_paciente.direccion" placeholder="Direccion">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="telefono" ng-model="editar_paciente.telefono" placeholder="Telefono">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="foto" ng-model="editar_paciente.foto" placeholder="Foto">
+                  </div>
               </div>
-            </div>
-
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="Apellidos" require/>
-                <label for='password'>Ingrese apellidos</label>
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-primary" ng-disabled="disEditPaciente" ng-click="put()">Editar</button>
               </div>
-            </div>
-
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="Cedula" require/>
-                <label for='password'>Ingrese c&eacute;dula</label>
-              </div>
-            </div>
-
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="Direccion" require/>
-                <label for='password'>Ingrese direcci&oacute;n paciente</label>
-              </div>
-            </div>
-
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="telefono" require/>
-                <label for='password'>Ingrese tel&eacute;fono</label>
-              </div>
-            </div>
-
-            <br />
-            <center>
-              <div class='row'>
-                <button type='submit' name='btn_login' class='col s4 btn red darken-1  btn-large waves-effect'>Enviar</button>
-                <button type='reset' name='btn_login' class='col s4 right red darken-1 btn btn-large waves-effect'>Borrar</button>
-              </div>
-            </center>
-          </form>
-</section>
+            </form>
+    </div>
+  </div>
+</div>
