Terminada las funcionalidades del modulo paciente

--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -2,7 +2,7 @@
     <h4>mis datos</h4>
     <div class="item" ng-repeat="examen in examenes">
         <span>
-            <a href="#"> Examen: {{examen.nombre}} </a> 
+            <h2> Examen: {{examen.nombre}} <span class="glyphicon glyphicon-download-alt">Descargar</span></h2> 
         </span>
     </div>
 </div>
