--- a/public/views/paciente/centros.html
+++ b/public/views/paciente/centros.html
@@ -2,24 +2,25 @@
     <h4>Centros Medicos</h4>
 
     <div class="col-xs-12 col-sm-6 col-md-4" ng-repeat="centro in centros">
-    <div class="contenedor">
-        <div class="centro-med">
-            <div class="lado frente">
-                <img src="{{centro.portada}}" alt="imagen"> 
-            </div>   
-            <div class="lado atras lado atras panel panel-default">
-                <div class="panel-heading tarjeta-titulo">
-                    <h4 class="text-center panel-title">{{centro.nombre}}</h4>
-                </div>
-                <div class="panel-body text-center">
-                    <h6 class="text-center">{{centro.descripcion}}</h6>
-                </div>
-                <div class="panel-footer">
-                    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalCentro{{centro.nombre}}">Más Información</button>
+        <div class="contenedor">
+            <div class="centro-med">
+                <div class="lado frente">
+                    <img src="{{centro.portada}}" alt="imagen"> 
+                </div>   
+                <div class="lado atras lado atras panel panel-default">
+                    <div class="panel-heading tarjeta-titulo">
+                        <h4 class="text-center panel-title titulo">{{centro.nombre}}</h4>
+                    </div>
+                    <div class="panel-body horarios text-center">
+                        <p dia text-center small>Horarios</p>
+                        <p ng-repeat="dia in centro.horario" class="dia text-center small">{{dia}}</p>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-block info" ng-click="procesar(centro)">Más Información</button>
+                    
                 </div>
             </div>
-        </div>    
-    </div>
+
+              
         
     </div>    
 </div>
