--- a/public/views/operario/registrarMuestra.html
+++ b/public/views/operario/registrarMuestra.html
@@ -42,7 +42,7 @@
     <li>
         <div class="collapsible-header large active"><i class="material-icons">label</i>Muestras</div>
         <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
-            <table class="table table-bordered table-striped">
+            <table id="teibol" class="table table-bordered table-striped">
               <thead>
                 <tr>
                   <th>tipo</th>
