--- a/public/views/operario/registrarPaciente.html
+++ b/public/views/operario/registrarPaciente.html
@@ -35,7 +35,7 @@
     <li>
         <div class="collapsible-header large active"><i class="material-icons">label</i>Lista de Pacientes</div>
         <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
-            <table class="table table-bordered table-striped">
+          <table class="table table-striped table-bordered">
           <thead>
             <tr>
               <th>nombre</th>
