--- a/public/views/paciente/datos.html
+++ b/public/views/paciente/datos.html
@@ -1,51 +1,23 @@
 <div class="section no-pad-bot">
   <div class="container">
     <div class="row center">
-      <form class="col s12" id="formularioActualizarPaciente" action="/paciente/:id" method="put">
-        <h4>Actualice sus Datos</h4>
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="Nombres" require/>
-                <label for='password'>Ingrese nombre</label>
-              </div>
-            </div>
+      <div>
 
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="Apellidos" require/>
-                <label for='password'>Ingrese apellidos</label>
-              </div>
-            </div>
+        <form id="formularioActualizarPaciente">
+            <fieldset>
+                <legend>Actualice sus datos</legend>
+                Nombres: <input type="text" name="nombre" placeholder="Ingrese sus nombres" ng-model="datos.nombre" value="{{datos.nombre}}" require/><br />
+                Apellidos: <input type="text" name="apellido" placeholder="Ingrese sus apellidos" ng-model="datos.apellido" value="{{datos.nombre}}" require/><br />
+                C&eacute;dula: <input type="text" name="cedula" placeholder="Ingrese su c&eacute;dula" ng-model="datos.cedula" value="{{datos.nombre}}" require/><br />
+                Direcci&oacute;n: <input type="text" name="direccion" placeholder="Ingrese su direcci&oacute;" ng-model="datos.direccion" value="{{datos.nombre}}" require/><br />
+                Tel&eacute;fono: <input type="text" name="telefono" placeholder="Ingrese su tel&eacute;fono"  ng-model="datos.telefono" value="{{datos.nombre}}" require/><br />
+                <button type="button" class="btn btn-primary" ng-click="actualizar()">Enviar</button>
+                <button type="button" class="btn btn-primary" ng-click="regresar()">Regresar</button>
+            </fieldset>
+        </form>
 
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="Cedula" require/>
-                <label for='password'>Ingrese c&eacute;dula</label>
-              </div>
-            </div>
 
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="Direccion" require/>
-                <label for='password'>Ingrese direcci&oacute;n paciente</label>
-              </div>
-            </div>
-
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input type="text" name="telefono" require/>
-                <label for='password'>Ingrese tel&eacute;fono</label>
-              </div>
-            </div>
-
-            <br />
-            <center>
-              <div class='row'>
-                <button type='submit' name='btn_login' class='col s4 btn btn-large waves-effect'>Enviar</button>
-                <button type='reset' name='btn_login' class='col s4 right btn btn-large waves-effect'>Borrar</button>
-              </div>
-            </center>
-          </form>
+    </div>
     </div>
   </div>
 </div>
