inicio terminado al igual que la documentacion

--- a/views/app/footer.ejs
+++ b/views/app/footer.ejs
@@ -1,24 +1,25 @@
 <div class="page-footer container">
   <div class="row">
     <div class="col l6 s12">
-      <h5 class="white-text">Company Bio</h5>
-      <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
+      <h5 class="white-text"><b>MEAN</b> Team</h5>
+        <ul>
+            <li><a class="white-text">We are a team of college smart students. Somos polit&eacute;nicos pilas.</a></li>
+        <li><a class="white-text">Thanks Gracias</a>
+        <li><a class="white-text"><b>Edgar</b><i>Jamil</i><u>Guido</u>Lenin</a>
+        </ul> 
     </div>
     <div class="col l3 s12 right">
-      <h5 class="white-text">Settings</h5>
+      <h5 class="white-text"><b>Documentaci&oacute;n</b></h5>
       <ul>
-        <li><a class="white-text" href="#!">Link 1</a></li>
-        <li><a class="white-text" href="#!">Link 2</a></li>
-        <li><a class="white-text" href="#!">Link 3</a></li>
-        <li><a class="white-text" href="#!">Link 4</a></li>
+        <li><a class="white-text" href="https://www.lucidchart.com/documents/embeddedchart/f726bb32-0c1a-455d-aaf6-a79f73ac10d8">Modelo </a></li>
+        <li><a class="white-text" href="https://espolec-my.sharepoint.com/personal/lhtenece_espol_edu_ec/_layouts/15/guestaccess.aspx?guestaccesstoken=VW1P1j6NJtsRnQeUppZvqbwr5s%2b6%2fLcL8oiju%2fuO1rA%3d&docid=0cc7b6ce2ad114f82b8df09531c33a44d&rev=1&expiration=2017-01-06T06%3a43%3a04.000Z">Documentaci&oacute;n del Proyecto</a></li>
+        <li><a class="white-text" href="https://github.com/wjvelez/saludPrimero">Repositorio GIT</a></li>
       </ul>
     </div>
   </div>
 </div>
 <div class="footer-copyright">
   <div class="container">
-    Made by <a class="brown-text text-lighten-3" href="https://www.facebook.com/naomi.castillo.9480?fref=ts">Valor Team</a>
+    Made by <a class="brown-text text-lighten-3" href="https://www.facebook.com/naomi.castillo.9480?fref=ts">MEAN Team</a>
   </div>
 </div>
