bueno, ya fue la vida. Me pregunto que se podria hacer en una situacion como esta, digo, no nos falta mucho a decir verdad, solo queremos ser los mejores, mejores que nadie mas, el proyecto nuestra prueba es, programar nuestro ideal.

--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -1,8 +1,8 @@
-<div class="todoList bg-info">
-    <h4>mis datos</h4>
+<div class="container">
+    <h4>Examenes</h4>
     <div class="item" ng-repeat="examen in examenes">
         <span>
-            <h2> Examen: {{examen.nombre}} <span class="glyphicon glyphicon-download-alt">Descargar</span></h2> 
+            <h4> Examen: {{examen.nombre}} <span class="glyphicon glyphicon-download-alt">Descargar</span></h4> 
         </span>
     </div>
 </div>
