--- a/public/views/paciente/modal.html
+++ b/public/views/paciente/modal.html
@@ -1,16 +1,24 @@
+<div class="carousel carousel-slider center teal" data-indicators="true">
+    <div class="carousel-fixed-item center">
+      <h3 class="white-text">{{actual.nombre}}</h3>
+      <h4 class="white-text">{{actual.ciudad}}</h4>
+      <h4 class="white-text">{{actual.direccion}}</h4>
+      <a class="btn waves-effect teal" ng-click="abrir()">Como llegar</a>
+    </div>
+    <div class="carousel-item white white-text">
+      <img src="{{actual.foto1}}">
+    </div>
+    <div class="carousel-item white white-text">
+      <img src="{{actual.foto2}}">
+    </div>
+    <div class="carousel-item white white-text">
+      <img src="{{actual.foto3}}">
+    </div>
+  </div>
 
-
-<div class="container">
-    <h3>{{actual.nombre}}</h3>
-    <h4>{{actual.direccion}}</h4>
-    <h4>{{actual.}</h4>
-    
-    <div class="container-fluid">      
-      <div class="carousel">
-        <a class="carousel-item" href="#1!"><img src="{{actual.foto1}}"></a>
-        <a class="carousel-item" href="#2!"><img src="{{actual.foto2}}"></a>
-        <a class="carousel-item" href="#3!"><img src="{{actual.foto3}}"></a>
-      </div>
-      </div>
-
-</div>
+<!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7974.028468568863!2d-79.96830796821938!3d-2.1482369294487267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2s!4v1467777281521" width="100%" height="470px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+  </div>
