--- a/views/paciente.ejs
+++ b/views/paciente.ejs
@@ -14,18 +14,8 @@
         </header>
         <main>
             <% include app/header %>
-            <div id="index-banner" class="parallax-container">
-              <div class="section no-pad-bot">
-                <div class="container">
-                  <br><br>
-                  <h1 class="header center teal-text text-lighten-2"><%= nombre %> <%= apellido %></h1>
-                  <br><br>
-                </div>
-              </div>
-              <div class="parallax"><img src="imagenes/main3.jpg"></div>
-            </div>
 
-            <div class="container">
+            <div>
               <ui-view></ui-view>
             </div>
             
