--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <style>
 h5 {
     border-bottom: 3px solid #cc9900;
@@ -17,12 +17,12 @@ table tr:nth-child(even) {
     background-color: #ffffff;
 }
 </style>
-<div class="section no-pad-bot">
-  <div class="container">
+<div class="section no-pad-bot" >
+  <div class="container" >
     <div class="row center">
       <h5 class="header col s12 light">Mis Ex&aacute;menes</h5>
         <div>
-        <table class="responsive-table" class=’export-table’> <!-- Tabla pura en html
+        <table class="responsive-table" id="tntGridServices" ui-grid="gridOptions" ui-grid-selection ui-grid-exporter> <!-- Tabla pura en html
         a) Fecha de la toma de la muestra.
         b) Exámenes a realizarse contra la muestra medica.
         c) Estado: Recién se ha ingresado al sistema, la muestra está en proceso de análisis del
@@ -43,13 +43,6 @@ table tr:nth-child(even) {
                 <td>Celda 4</td>
             </tr>
         </table>
-=======
-<div class="todoList bg-info">
-    <h4>mis datos</h4>
-    <div class="item" ng-repeat="examen in examenes">
-        <span>
-            <h2> Examen: {{examen.nombre}} <span class="glyphicon glyphicon-download-alt">Descargar</span></h2> 
-        </span>
->>>>>>> wjvelez
+
     </div>
 </div>
