--- a/views/paciente.ejs
+++ b/views/paciente.ejs
@@ -21,6 +21,10 @@
         <script type="text/javascript" src="scripts/patient/appAngular.js"></script>
 
         <script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>
+        <script src="http://ui-grid.info/release/ui-grid.js"></script>
+        <link rel="stylesheet" href="http://ui-grid.info/release/ui-grid.css" type="text/css">
+        <link rel="stylesheet" href="main.css" type="text/css">
+        
     </head>
 
     <body ng-app="appPatient">
@@ -44,5 +48,6 @@
         <script src="scripts/init.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.12/datatables.min.js"></script>
+        
     </body>
 </html>
