mejorando el diseño de pacientes

--- a/public/views/paciente/datos.html
+++ b/public/views/paciente/datos.html
@@ -9,7 +9,7 @@
               <label class="active" for="icon_prefix">Nombres</label>
             </div>
             <div class="input-field col s6">
-              <input id="icon_prefix" type="text" name="nombre" placeholder="Ingrese sus nombres" ng-model="datos.nombre" value="{{datos.nombre}}" require/>
+              <input id="icon_prefix" type="text" name="nombre" placeholder="Ingrese sus apellidos" ng-model="datos.apellido" value="{{datos.apellido}}" require/>
               <label class="active" for="icon_prefix">Apellidos</label>
             </div>
             <div class="input-field col s12">
