--- a/views/app/login.ejs
+++ b/views/app/login.ejs
@@ -16,7 +16,7 @@
       <div class="row center">
         <h5 class="header col s12 light">Bienvenidos</h5>
         <!-- Modal Trigger -->
-        <a class="modal-trigger waves-effect waves-light btn" href="#modal1">LogIn</a>
+        <a class="modal-trigger waves-effect waves-light btn cyan darken-2" href="#modal1">LogIn</a>
       </div>
       <br><br>
     </div>
@@ -62,7 +62,7 @@
             <br />
             <center>
               <div class='row'>
-                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect'>Login</button>
+                <button type='submit' name='btn_login' class='col s12 btn cyan darken-2 btn-large waves-effect'>Login</button>
               </div>              
             </center>
           </form>
@@ -136,7 +136,7 @@
               <p>Mis Datos</p>
           </div>
           <div class="card-action">
-              <a class="modal-trigger waves-effect waves-light btn" href="#modalPcte">Gu&iacute;a Completa</a>
+              <a class="modal-trigger waves-effect waves-light btn cyan darken-2" href="#modalPcte">Gu&iacute;a Completa</a>
           </div>
         </div>
     </div>
@@ -154,7 +154,7 @@
               <p>Consultar Gr&aacute;ficos Estad&iacute;sticos</p>
           </div>
         <div class="card-action">
-          <a class="modal-trigger waves-effect waves-light btn" href="#modalOp">Gu&iacute;a Completa</a>
+          <a class="modal-trigger waves-effect waves-light btn cyan darken-2" href="#modalOp">Gu&iacute;a Completa</a>
         </div>
       </div>
     </div>
@@ -172,7 +172,7 @@
             <p>Visualizar tablas de los resultados</p>
         </div>
         <div class="card-action">
-          <a class="modal-trigger waves-effect waves-light btn" href="#modalLab">Gu&iacute;a Completa</a>
+          <a class="modal-trigger waves-effect waves-light btn cyan darken-2" href="#modalLab">Gu&iacute;a Completa</a>
         </div>
       </div>
     </div>
