--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
   	<main>
 		<% include app/login %>
 	</main>
-	<footer class="page-footer teal">
+	<footer class="page-footer cyan darken-2">
 		<% include app/footer %>
 	</footer>
 	<!--  Scripts-->
