--- a/views/user/sideOperario.ejs
+++ b/views/user/sideOperario.ejs
@@ -1,6 +1,6 @@
 <ul id="slide-out" class="side-nav fixed">
   <li class="">
-    <div class="userView red darken-1">
+    <div class="userView teal">
       <a href="#"><img class="circle" src="imagenes/1.jpg"></a>
       <a href="#"><span class="white-text name"><%= nombre %> <%= apellido %></span></a>
       <a href="#"><span class="white-text email">Operario</span></a>
