--- a/public/views/paciente/centros.html
+++ b/public/views/paciente/centros.html
@@ -18,8 +18,8 @@
         <div class="contenedor">
             <div style="height:310px"  class="centro-med">
                 <div class="lado frente">
-                    <div class="card">
-                        <div class="card-image">
+                    <div style="height:294px; width:270px; " class="card">
+                        <div style="height:294px;" class="card-image">
                             <img src="{{centro.portada}}" alt="imagen"> 
                             <span class="card-title">{{centro.nombre}}</span>
                         </div> 
@@ -34,35 +34,43 @@
                     <button type="button" class="btn btn-primary btn-block info
                     modal-trigger waves-effect waves-light btn cyan darken-2" href="#modalInfo" ng-click="procesar(centro)">Más Información</button>
                 </div>
+                
+            </div>
+            <div class="modal" id="modalInfo">
+                <div class="modal-content">
+                    <h6>{{actual.nombre}}</h6>
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                       
+                      <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-ng-repeat="i in [0,1,2]" data-slide-to="{{i}}"></li>
+                      </ol>
+                      <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="{{actual.portada}}" alt="portada" width="460" height="345">
+                        </div>
+                        <div class="item" ng-repeat="foto in actual.fotos">
+                          <img src="{{foto.ruta}}" alt="carrusel">
+                        </div>
+                      </div>
+
+                      
+                      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    </div>
+
+                    
+                        
+                </div>
             </div>
         </div>
 
-        <div id="modalInfo" class="modal grey">
-            <div class="modal-content" >
-                <center>
-              <div class="section"></div>
-                <div class="container">
-                    <div class="z-depth-1 red lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-                        <h3 class="white-text">{{actual.nombre}}</h3>
-                        <h3 class="white-text">{{actual.ciudad}}</h4>
-                        <h3 class="white-text">{{actual.direccion}}</h4>
-                        <div class="carousel carousel-slider center teal" data-indicators="true">
-                            <div class="carousel-item white white-text">
-                              <img src="{{actual.foto1}}">
-                            </div>
-                            <div class="carousel-item white white-text">
-                              <img src="{{actual.foto2}}">
-                            </div>
-                            <div class="carousel-item white white-text">
-                              <img src="{{actual.foto3}}">
-                            </div>
-                        </div>
-                    </div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7974.028468568863!2d-79.96830796821938!3d-2.1482369294487267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2s!4v1467777281521" width="100%" height="470px" frameborder="0" style="border:0" allowfullscreen></iframe>
-              </div>
-                </center> 
-            </div>
-        </div> 
+        
     </div>
 
 </div>
