...limpiando caracteres raros...

--- a/public/views/operario/registrarMuestra.html
+++ b/public/views/operario/registrarMuestra.html
@@ -54,7 +54,7 @@
                 </tr>
               </thead>
               <tbody>
-                  <tr ng-repeat="muestra in muestras">;
+                  <tr ng-repeat="muestra in muestras">
                       <td class="tipo"> {{ muestra.tipo }} </td>
                       <td class="cod_barras"> {{ muestra.cod_barras }} </td>
                       <td class="recibido"> {{ muestra.recibido }} </td>
