--- a/public/views/laboratorista/muestra.html
+++ b/public/views/laboratorista/muestra.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="muestra in muestras">;
+        <tr ng-repeat="muestra in muestras">
             <td class="codigo">{{muestra.cod_barras}}</td>
             <td class="tipo">{{muestra.tipo}}</td>
             <td class="llego">{{muestra.recibido}}</td>
