--- a/public/views/operario/registrarPaciente.html
+++ b/public/views/operario/registrarPaciente.html
@@ -49,7 +49,7 @@
             </tr>
           </thead>
           <tbody>
-              <tr ng-repeat="paciente in pacientes">;
+              <tr ng-repeat="paciente in pacientes">
                   <td class="nombre"> {{ paciente.nombre }} {{ paciente.apellido }}</td>
                   <td class="correo"> {{ paciente.correo }} </td>
                   <td class="cedula" > {{ paciente.cedula }} </td>
